[project]
name = "espn_api"
version = "0.1.0"
dependencies = [
    "requests>=2.31.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
